--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Business Security</a></li>
-          <li><a class="nav-link scrollto" href="#services">Home Security</a></li>
+          <li><a class="nav-link scrollto" href="#about">Learn More</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
